--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.2",
     "express": "^4.18.2",
-    "mongoos": "^0.0.1-security",
-    "mongoose": "^8.1.1",
+    "mongoose": "^7.5.3",
     "node-cron": "^3.0.3",
     "node-fetch": "^3.3.2",
     "nodemon": "^3.0.3"
@@ -15,6 +14,9 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
+  },
+  "engines": {
+    "node": "14.x"
   },
   "keywords": [
     "website",
